Fix overflow-x issue

--- a/idea-02/styles.css
+++ b/idea-02/styles.css
@@ -16,7 +16,6 @@
   width: 10px;
   width: 10px;
 }
-
 *::-webkit-scrollbar-track {
   border-radius: 5px;
   background-color: #DFE9EB;
@@ -62,22 +61,21 @@ body {
   background: yellow;
   wdith: 100%;
   height: 100%;
+/*   padding: 5px; */
 }
-
 .header {
   height: 34px;
   width: 100%;
   background: darkslateblue;
 }
-
 .content {
   display: flex;
   gap: 5px;
   height: 100%;
   width: 100%;
   background: gray;
+  overflow-x: hidden;
 }
-
 .sidebar {
   display: flex;
   flex-direction: column;
@@ -86,21 +84,19 @@ body {
   height: 100%;
   background: pink;
 }
-
 .menu-btn {
   width: 100%;
   height: 45px;
   background: gray;
   color: white;
 }
-
 .products-container {
   display: flex;
+  flex-direction: column;
   background: lightblue;
   width: 100%;
   height: 100%;
 }
-
 .products-nav {
   display: flex;
   justify-content: space-between;
@@ -112,7 +108,6 @@ body {
   border-bottom: 2px solid gray;
   padding: 8px;
 }
-
 .products-breadcrump {
   font-size: 12px;
   font-weight: bold;
@@ -121,7 +116,6 @@ body {
   gap: 8px;
   min-width: 40%;
 }
-
 .products-breadcrump > button {
   font-size: 28px;
   display: flex;
@@ -130,26 +124,24 @@ body {
   border: none;
   outline: none;
   background: transparent;
+/*   min-width: 32px; */
+/*   min-height: 32px;  */
 }
-
 /* The :has() property not supported by Firefox */
 .barcode-btn:has(input:checked) {
   background: orange;
   text-align: center;
   color: white;
 }
-
 #barcodeinput {
   display: none;
 }
-
 .search-container {
   display: flex;
   justify-content: start;
   align-items: center;
   gap: 3px;
 }
-
 .barcode-btn {
   font-size: 24px;
   display: flex;
@@ -161,17 +153,15 @@ body {
   min-height: 32px;
   min-width: 32px;
 }
-
 .barcode-btn > label {
   padding-top: 2px;
   width: 100%;
+/*   border: 1px solid black; */
 }
-
 .barcode-btn>*:hover {
   color: gray;
   cursor: pointer;
 }
-
 .search-box {
   display: flex;
   justify-content: start;
@@ -182,25 +172,23 @@ body {
   min-width: 233px;
   border: 2px solid #76b39d;
 }
-
 .search-form {
   display: flex;
   width: 100%;
   margin: 0;
   padding: 0 px;
 }
-
 .search-input {
   display: flex;
   border: none;
   font-size: 14px;
   outline: none;
   color: #085f63;
+/*   background: pink; */
   min-height: 32px;
   width: 100%;
   padding: 0 3px;
 }
-
 .search-form > button {
   font-size: 18px;
   border: none;
@@ -211,76 +199,167 @@ body {
   min-height: 32px;
   min-width: 32px;
 }
-
 .search-form > button:hover {
   color: gray;
 }
+.product-list {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto auto auto auto;
+  justify-contnet: center;
+  align-items: center;
+  gap: 10px;
+  background: white;
+  height: 100%;
+  width: 100%;
+}
+.product-list div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+/*   background: gray; */
+  height: 50px;
+}
+.color1 {background-color: hsl(271, 85%, 90%);}
+.color2 {background-color: hsl(271, 90%, 82%);}
+.color3 {background-color: hsl(271, 95%, 75%);}
+.color4 {background-color: hsl(271, 86%, 62%);}
+.color5 {background-color: hsl(271, 77%, 52%);}
+.color6 {background-color: hsl(271, 81%, 42%);}
+.color7 {background-color: hsl(271, 85%, 35%);}
+.color8 {background-color: hsl(271, 92%, 29%);}
+.color9 {background-color: hsl(271, 100%, 24%);}
 
 .bill-container {
   display: flex;
   flex-direction: column;
   background: lightgray;
+  gap: 3px;
   min-width: 377px;
   height: 100%;
+  overflow-x: hidden;
 }
-
-.bill-header {
+/* .bill-nav {
+  min-height: 55px;
+  width: 100%;
+  background: aqua;
+} */
+/* .bill-header {
   min-height: 45px;
   width: 100%;
   background: pink;
-}
-
+} */
 .bill-items {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  background: darkgray;
   height: 100%;
   width: 100%;
-  background: darkgray;
+  overflow-x: hidden;
 }
-
+.bill-items .item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: start;
+  text-align: center;
+  padding: 5px;
+  height: 55px;
+  width: 100%;
+  background: white;
+}
+.bill-items .item .name {
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.bill-items .item:nth-child(odd) {
+  background-color: lavender;
+}
+.bill-total {
+  background: ghostwhite;
+/*   border-radius: 8px; */
+  height: 144px;
+  width: 100%;
+  padding: 5px;
+}
+.bill-total ul {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  list-style-type: none;
+  color: grey;
+  margin: 0;
+  padding: 0;
+}
+.bill-total ul li {
+  display: flex;
+  justify-content: space-between;
+  aign-items: center;
+  text-align: center;
+}
+.bill-total hr {
+  border-top: 2px dotted;
+}
+.bill-value {
+  font-weight: bold;
+  color: #2c2c2c;
+}
+.total {
+  font-size: 16px;
+  font-weight: bolder;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  padding-top: 5px;
+}
 .bill-control {
   display: grid;
+  padding-right: 2px;
   grid-template-rows: 35% 65%;
   min-height: 233px;
   width: 100%;
 }
-
 .bill-control button {
   border-radius: 3px;
 }
-
 .top-row {
   display: grid;
-  grid-template-columns: 40% 20% 25% 15%;
+  grid-template-columns: 40% 40% 20%;
 }
-
+.quotation-order-btn {
+  grid-column: 2 / 4;
+}
 .bottom-row {
   display: grid;
   grid-template-columns: 40% 60%;
 }
-
-.quotation-order-btn {
-  grid-column: 2 / span 3;
-}
-
 .action-btns {
   display: grid;
   grid-template-columns: 50% 50%;
   height: 100%;
 }
-
+.customer-btn {
+  grid-column: 1 / span 2;
+  grid-row: 1 / span 1;
+}
 .pay-btn {
   grid-column: 1 / span 2;
-  grid-row: 1 / span 5;
+  grid-row: 2 / span 3;
   background: green;
 }
-
 .cancel-btn {
   background: red;
 }
-
 .hold-btn {
   background: orange;
 }
-
 .numpad-btns {
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
